# bess-arbitrage

./: .gitignore  DESIGN.md  LICENSE  README.md  app.py  app_map.py  data_zones.geojson  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  monthly-report.yml
.streamlit/: config.toml
bess_arbitrage/: __main__.py  activation.py  atlas.py  balancing.py  bench.py  capture.py  insights.py  model.py  prices.py  report.py
docs/: ai-layer.md  architecture.md  come-funziona.md  how-it-works.md
reports/: 2026-06.md
tests/: test_activation.py  test_invariants.py
