[project]
name = "bess-arbitrage"
version = "0.1.0"
description = "Perfect-foresight BESS arbitrage revenue and capture ratio on European day-ahead power markets (LP, HiGHS)"
readme = "README.md"
authors = [{ name = "Francesco Borsatto" }]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.0",
    "folium>=0.20.0",
    "highspy>=1.14.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pulp>=3.3.2",
    "requests>=2.34.2",
    "streamlit>=1.60.0",
    "tabulate>=0.9",
    "streamlit-folium>=0.27.2",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.urls]
Repository = "https://github.com/fr4borsa/bess-arbitrage"

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = ["error"]  # a new deprecation is a failing test, not 7k ignored lines

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E731"]  # assigned lambdas are used deliberately (see model.irr)
